# ChatPiano

./: .gitignore  .gitmodules  README.md  inference.ipynb  main.py  main_demo.py  pyproject.toml  requirement.txt  requirement_lock.txt  setup.py  start_demo.py
archive/: inference.ipynb  start_demo.py
chat_piano/: __init__.py  flaskView.py  tests.py
chat_piano/tools/: __init__.py  generateMidiTool.py  midiPlayerTool.py  searchOnlineTool.py
docs/: ChatPiano.drawio  swagger.json
docs/en/: ChatPiano.drawio
modules/knowledge-database-management-service/: README.md
modules/llm-text2text-service/: README.md
music_files/: .gitignore  chatpiano_theme.mid  extractFirst4.py  extractFirstFew.py  guojiao_3track.mid  guojiao_3track_4bars.mid  guojiao_3track_8bars.mid  guojiao_mel_first2bars.mid
src/chat_piano/control/: text2midiService.py
src/chat_piano/dao/: __init__.py  agentDataManager.py
src/chat_piano/model/: dataModel.py
src/chat_piano/utils/: __init__.py
src/control/: __init__.py
src/dao/: configDataManager.py  historyDataManager.py
src/model/: botModel.py
src/view/: __init__.py
storage/: 17804970-0e19-4b1f-b50f-b76dabb08a34.mid  278d56cb-63aa-4abd-8351-15d00eb9097b.mid  2dbb9df3-14f7-4cde-9b45-e4236f554cf6.mid  8ea0198c-4262-4ae5-a420-2c6051c32220.mid  bb6f93d9-3a46-439a-85f9-dbcb4a970800.mid
