[project]
name = "chatpiano"
version = "0.1.0"
description = "Chat Piano: Leveraging AI to interpret voice commands and convert them into MIDI files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "flask-restx>=1.3.0",
    "flask>=3.1.0",
    "ipython>=8.30.0",
    "mido>=1.3.3",
    "numpy>=2.1.3",
    "pydub>=0.25.1",
    "python-rtmidi>=1.5.8",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "torch>=2.5.1",
    "flask-cors>=5.0.0",
    "midi2audio>=0.1.1",
]
